--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>GIRAS DE POMBAGIRAS - PONTOS</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css " />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@700 ;900&family=UnifrakturMaguntia&family=Crimson+Text:wght@600&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@700;900&family=UnifrakturMaguntia&family=Crimson+Text:wght@600&display=swap');
 
     :root {
       --vermelho-pomba: #8b0000;
@@ -263,7 +263,7 @@
 
   <header>
     <h1>✨ GIRAS DE POMBAGIRAS - PONTOS ✨</h1>
-    <p class="subtitle">15 Pontos das Rainhas da Encruzilhada 🔥🌹</p>
+    <p class="subtitle">20 Pontos das Rainhas da Encruzilhada 🔥🌹</p>
     <p class="ritual-note">
       <i class="fas fa-candle-holder"></i> Ofereça com respeito. Ela escuta quando o coração é verdadeiro.
     </p>
@@ -274,81 +274,105 @@
 
   <div class="playlist" id="playlist">
 
-    <!-- Lista de faixas -->
-    <!-- (mantive os mesmos vídeos, mas agora com layout aprimorado) -->
+    <!-- Lista de faixas atualizada com 20 músicas -->
     <div class="track">
-      <div class="track-title">1. Oh Pombagira, Você é a Mais Bela Flor</div>
-      <iframe src="https://www.youtube.com/embed/RC_US2prJYs?enablejsapi=1 " allowfullscreen></iframe>
+      <div class="track-title">1. Pomba Gira Rainha - Ponto Forte</div>
+      <iframe src="https://www.youtube.com/embed/coi-tvUWwmc?enablejsapi=1" allowfullscreen></iframe>
     </div>
 
     <div class="track">
-      <div class="track-title">2. Laroyê Pombagira — Ela Gira no Ar</div>
-      <iframe src="https://www.youtube.com/embed/10DwcvLoxrI?enablejsapi=1 " allowfullscreen></iframe>
+      <div class="track-title">2. Pombagira Cigana - Girando Fogaréu</div>
+      <iframe src="https://www.youtube.com/embed/gHxlvf2glU0?enablejsapi=1" allowfullscreen></iframe>
     </div>
 
     <div class="track">
-      <div class="track-title">3. Moça Bonita, Moça Faceira</div>
-      <iframe src="https://www.youtube.com/embed/8cInvGRgB9w?enablejsapi=1 " allowfullscreen></iframe>
+      <div class="track-title">3. Rainha da Encruzilhada - Sete Saias</div>
+      <iframe src="https://www.youtube.com/embed/1rrmBzp9Cfo?enablejsapi=1" allowfullscreen></iframe>
     </div>
 
     <div class="track">
-      <div class="track-title">4. Cemitério é Praça Linda — Padilha Mora Lá</div>
-      <iframe src="https://www.youtube.com/embed/jTjHs5og2rc?enablejsapi=1 " allowfullscreen></iframe>
+      <div class="track-title">4. Maria Padilha - Não Me Deixe Desesperar</div>
+      <iframe src="https://www.youtube.com/embed/KAwFZvDHOk4?enablejsapi=1" allowfullscreen></iframe>
     </div>
 
     <div class="track">
-      <div class="track-title">5. Pombagira é Mulher de Sete Maridos</div>
-      <iframe src="https://www.youtube.com/embed/bOfetOf9DaI?enablejsapi=1 " allowfullscreen></iframe>
+      <div class="track-title">5. Pombagira das Almas - Trabalho de Gira</div>
+      <iframe src="https://www.youtube.com/embed/doPc-mLAH1g?enablejsapi=1" allowfullscreen></iframe>
     </div>
 
     <div class="track">
-      <div class="track-title">6. Malelê Malelê — As Pombagiras de Malelê</div>
-      <iframe src="https://www.youtube.com/embed/xlHDyGK9ouU?enablejsapi=1 " allowfullscreen></iframe>
+      <div class="track-title">6. Laroyê Maria Mulambo - Ponto de Chamada</div>
+      <iframe src="https://www.youtube.com/embed/Tp1MB84YL2s?enablejsapi=1" allowfullscreen></iframe>
     </div>
 
     <div class="track">
-      <div class="track-title">7. Umbanda — Sua Rainha Chegou</div>
-      <iframe src="https://www.youtube.com/embed/XSex5w1W2CY?enablejsapi=1 " allowfullscreen></iframe>
+      <div class="track-title">7. Pomba Gira Mirongueira - Na Sete Encruzilhadas</div>
+      <iframe src="https://www.youtube.com/embed/dCNo7XIyMQ0?enablejsapi=1" allowfullscreen></iframe>
     </div>
 
     <div class="track">
-      <div class="track-title">8. Que Bela Noite, Que Lindo Luar</div>
-      <iframe src="https://www.youtube.com/embed/1mPMESy3-LY?enablejsapi=1 " allowfullscreen></iframe>
+      <div class="track-title">8. Rainha da Calunga - Dona da Praia</div>
+      <iframe src="https://www.youtube.com/embed/hH1pNWlM2zE?enablejsapi=1" allowfullscreen></iframe>
     </div>
 
     <div class="track">
-      <div class="track-title">9. Dona Pombagira, Leva Todo o Mal Pra Lá</div>
-      <iframe src="https://www.youtube.com/embed/Qayjpt6EcVQ?enablejsapi=1 " allowfullscreen></iframe>
+      <div class="track-title">9. Pomba Gira Dama da Noite - Ponto de Defumação</div>
+      <iframe src="https://www.youtube.com/embed/wo_D21rsYAE?enablejsapi=1" allowfullscreen></iframe>
     </div>
 
     <div class="track">
-      <div class="track-title">10. Pombagira Não Anda Sozinha</div>
-      <iframe src="https://www.youtube.com/embed/R1u7tp9XUrg?enablejsapi=1 " allowfullscreen></iframe>
+      <div class="track-title">10. Maria Quitéria - Guerreira das Sete Flechas</div>
+      <iframe src="https://www.youtube.com/embed/Q182YSAcgNk?enablejsapi=1" allowfullscreen></iframe>
     </div>
 
     <div class="track">
-      <div class="track-title">11. Arreda Homem, Que Aí Vem Mulher</div>
-      <iframe src="https://www.youtube.com/embed/oDMZ24BflCU?enablejsapi=1 " allowfullscreen></iframe>
+      <div class="track-title">11. Pombagira da Luz - Tronco de Umbanda</div>
+      <iframe src="https://www.youtube.com/embed/P4mC3avgs3Y?enablejsapi=1" allowfullscreen></iframe>
     </div>
 
     <div class="track">
-      <div class="track-title">12. Pombagira da Praia — Saia que o Vento Balança</div>
-      <iframe src="https://www.youtube.com/embed/uC3Hxm3VCmc?enablejsapi=1 " allowfullscreen></iframe>
+      <div class="track-title">12. Menina da Lua - Cantiga de Pemba</div>
+      <iframe src="https://www.youtube.com/embed/GcRdBJzBMa8?enablejsapi=1" allowfullscreen></iframe>
     </div>
 
     <div class="track">
-      <div class="track-title">13. Ela É Rainha do Cruzeiro</div>
-      <iframe src="https://www.youtube.com/embed/2t0-S0AW-9M?enablejsapi=1 " allowfullscreen></iframe>
+      <div class="track-title">13. Rainha do Cigarro - Fumaça Branca Subindo</div>
+      <iframe src="https://www.youtube.com/embed/3krnGT0s0bQ?enablejsapi=1" allowfullscreen></iframe>
     </div>
 
     <div class="track">
-      <div class="track-title">14. Pombagira Sete Encruzilhadas</div>
-      <iframe src="https://www.youtube.com/embed/dARZQgEwk1o?enablejsapi=1 " allowfullscreen></iframe>
+      <div class="track-title">14. Pomba Gira Rosa Vermelha - Amor e Desejo</div>
+      <iframe src="https://www.youtube.com/embed/JYCfOQtEz50?enablejsapi=1" allowfullscreen></iframe>
     </div>
 
     <div class="track">
-      <div class="track-title">15. Ela Chegou — Saravá Pomba Gira!</div>
-      <iframe src="https://www.youtube.com/embed/fKBwjdaBzJc?enablejsapi=1 " allowfullscreen></iframe>
+      <div class="track-title">15. Dona Janaina - Rainha das 7 Praias</div>
+      <iframe src="https://www.youtube.com/embed/qN935nP6tEw?enablejsapi=1" allowfullscreen></iframe>
+    </div>
+
+    <div class="track">
+      <div class="track-title">16. Pombagira Cachaça - Ponto de Despacho</div>
+      <iframe src="https://www.youtube.com/embed/CoVIhTrUe3w?enablejsapi=1" allowfullscreen></iframe>
+    </div>
+
+    <div class="track">
+      <div class="track-title">17. Maria Caveira - Dança na Terra da Luz</div>
+      <iframe src="https://www.youtube.com/embed/t3YhMcwURzY?enablejsapi=1" allowfullscreen></iframe>
+    </div>
+
+    <div class="track">
+      <div class="track-title">18. Pomba Gira Exu - Caminho Aberto</div>
+      <iframe src="https://www.youtube.com/embed/2-NjMF-6GzI?enablejsapi=1" allowfullscreen></iframe>
+    </div>
+
+    <div class="track">
+      <div class="track-title">19. Rainha Pomba Gira - Axé do Canto</div>
+      <iframe src="https://www.youtube.com/embed/Ti_-EusVSj8?enablejsapi=1" allowfullscreen></iframe>
+    </div>
+
+    <div class="track">
+      <div class="track-title">20. Pombagira Misteriosa - Seu Mistério é Poder</div>
+      <iframe src="https://www.youtube.com/embed/YxQ24LupgKg?enablejsapi=1" allowfullscreen></iframe>
     </div>
 
   </div>
