--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
 
     <div class="track">
       <div class="track-title">2. Pombagira Cigana - Girando Fogaréu</div>
-      <iframe src="https://www.youtube.com/embed/gHxlvf2glU0?enablejsapi=1" allowfullscreen></iframe>
+      <iframe src="https://youtu.be/yuoHwAb-DKU" allowfullscreen></iframe>
     </div>
 
     <div class="track">
