--- a/index.html
+++ b/index.html
@@ -277,102 +277,102 @@
     <!-- Lista de faixas atualizada com 20 músicas -->
     <div class="track">
       <div class="track-title">1. Pomba Gira Rainha - Ponto Forte</div>
-      <iframe src="https://www.youtube.com/embed/coi-tvUWwmc?enablejsapi=1" allowfullscreen></iframe>
+      <iframe id="player-1" src="https://www.youtube.com/embed/coi-tvUWwmc?enablejsapi=1" allowfullscreen></iframe>
     </div>
 
     <div class="track">
-      <div class="track-title">2. Pombagira Cigana - Girando Fogaréu</div>
-      <iframe src="https://youtu.be/yuoHwAb-DKU" allowfullscreen></iframe>
+      <div class="track-title">2. Pomba Gira Rainha - Ponto de Mulher</div>
+      <iframe id="player-2" src="https://www.youtube.com/embed/yuoHwAb-DKU?enablejsapi=1" allowfullscreen></iframe>
     </div>
 
     <div class="track">
       <div class="track-title">3. Rainha da Encruzilhada - Sete Saias</div>
-      <iframe src="https://www.youtube.com/embed/1rrmBzp9Cfo?enablejsapi=1" allowfullscreen></iframe>
+      <iframe id="player-3" src="https://www.youtube.com/embed/1rrmBzp9Cfo?enablejsapi=1" allowfullscreen></iframe>
     </div>
 
     <div class="track">
       <div class="track-title">4. Maria Padilha - Não Me Deixe Desesperar</div>
-      <iframe src="https://www.youtube.com/embed/KAwFZvDHOk4?enablejsapi=1" allowfullscreen></iframe>
+      <iframe id="player-4" src="https://www.youtube.com/embed/KAwFZvDHOk4?enablejsapi=1" allowfullscreen></iframe>
     </div>
 
     <div class="track">
       <div class="track-title">5. Pombagira das Almas - Trabalho de Gira</div>
-      <iframe src="https://www.youtube.com/embed/doPc-mLAH1g?enablejsapi=1" allowfullscreen></iframe>
+      <iframe id="player-5" src="https://www.youtube.com/embed/doPc-mLAH1g?enablejsapi=1" allowfullscreen></iframe>
     </div>
 
     <div class="track">
       <div class="track-title">6. Laroyê Maria Mulambo - Ponto de Chamada</div>
-      <iframe src="https://www.youtube.com/embed/Tp1MB84YL2s?enablejsapi=1" allowfullscreen></iframe>
+      <iframe id="player-6" src="https://www.youtube.com/embed/Tp1MB84YL2s?enablejsapi=1" allowfullscreen></iframe>
     </div>
 
     <div class="track">
       <div class="track-title">7. Pomba Gira Mirongueira - Na Sete Encruzilhadas</div>
-      <iframe src="https://www.youtube.com/embed/dCNo7XIyMQ0?enablejsapi=1" allowfullscreen></iframe>
+      <iframe id="player-7" src="https://www.youtube.com/embed/dCNo7XIyMQ0?enablejsapi=1" allowfullscreen></iframe>
     </div>
 
     <div class="track">
       <div class="track-title">8. Rainha da Calunga - Dona da Praia</div>
-      <iframe src="https://www.youtube.com/embed/hH1pNWlM2zE?enablejsapi=1" allowfullscreen></iframe>
+      <iframe id="player-8" src="https://www.youtube.com/embed/hH1pNWlM2zE?enablejsapi=1" allowfullscreen></iframe>
     </div>
 
     <div class="track">
       <div class="track-title">9. Pomba Gira Dama da Noite - Ponto de Defumação</div>
-      <iframe src="https://www.youtube.com/embed/wo_D21rsYAE?enablejsapi=1" allowfullscreen></iframe>
+      <iframe id="player-9" src="https://www.youtube.com/embed/wo_D21rsYAE?enablejsapi=1" allowfullscreen></iframe>
     </div>
 
     <div class="track">
       <div class="track-title">10. Maria Quitéria - Guerreira das Sete Flechas</div>
-      <iframe src="https://www.youtube.com/embed/Q182YSAcgNk?enablejsapi=1" allowfullscreen></iframe>
+      <iframe id="player-10" src="https://www.youtube.com/embed/Q182YSAcgNk?enablejsapi=1" allowfullscreen></iframe>
     </div>
 
     <div class="track">
       <div class="track-title">11. Pombagira da Luz - Tronco de Umbanda</div>
-      <iframe src="https://www.youtube.com/embed/P4mC3avgs3Y?enablejsapi=1" allowfullscreen></iframe>
+      <iframe id="player-11" src="https://www.youtube.com/embed/P4mC3avgs3Y?enablejsapi=1" allowfullscreen></iframe>
     </div>
 
     <div class="track">
       <div class="track-title">12. Menina da Lua - Cantiga de Pemba</div>
-      <iframe src="https://www.youtube.com/embed/GcRdBJzBMa8?enablejsapi=1" allowfullscreen></iframe>
+      <iframe id="player-12" src="https://www.youtube.com/embed/GcRdBJzBMa8?enablejsapi=1" allowfullscreen></iframe>
     </div>
 
     <div class="track">
       <div class="track-title">13. Rainha do Cigarro - Fumaça Branca Subindo</div>
-      <iframe src="https://www.youtube.com/embed/3krnGT0s0bQ?enablejsapi=1" allowfullscreen></iframe>
+      <iframe id="player-13" src="https://www.youtube.com/embed/3krnGT0s0bQ?enablejsapi=1" allowfullscreen></iframe>
     </div>
 
     <div class="track">
       <div class="track-title">14. Pomba Gira Rosa Vermelha - Amor e Desejo</div>
-      <iframe src="https://www.youtube.com/embed/JYCfOQtEz50?enablejsapi=1" allowfullscreen></iframe>
+      <iframe id="player-14" src="https://www.youtube.com/embed/JYCfOQtEz50?enablejsapi=1" allowfullscreen></iframe>
     </div>
 
     <div class="track">
       <div class="track-title">15. Dona Janaina - Rainha das 7 Praias</div>
-      <iframe src="https://www.youtube.com/embed/qN935nP6tEw?enablejsapi=1" allowfullscreen></iframe>
+      <iframe id="player-15" src="https://www.youtube.com/embed/qN935nP6tEw?enablejsapi=1" allowfullscreen></iframe>
     </div>
 
     <div class="track">
       <div class="track-title">16. Pombagira Cachaça - Ponto de Despacho</div>
-      <iframe src="https://www.youtube.com/embed/CoVIhTrUe3w?enablejsapi=1" allowfullscreen></iframe>
+      <iframe id="player-16" src="https://www.youtube.com/embed/CoVIhTrUe3w?enablejsapi=1" allowfullscreen></iframe>
     </div>
 
     <div class="track">
       <div class="track-title">17. Maria Caveira - Dança na Terra da Luz</div>
-      <iframe src="https://www.youtube.com/embed/t3YhMcwURzY?enablejsapi=1" allowfullscreen></iframe>
+      <iframe id="player-17" src="https://www.youtube.com/embed/t3YhMcwURzY?enablejsapi=1" allowfullscreen></iframe>
     </div>
 
     <div class="track">
       <div class="track-title">18. Pomba Gira Exu - Caminho Aberto</div>
-      <iframe src="https://www.youtube.com/embed/2-NjMF-6GzI?enablejsapi=1" allowfullscreen></iframe>
+      <iframe id="player-18" src="https://www.youtube.com/embed/2-NjMF-6GzI?enablejsapi=1" allowfullscreen></iframe>
     </div>
 
     <div class="track">
       <div class="track-title">19. Rainha Pomba Gira - Axé do Canto</div>
-      <iframe src="https://www.youtube.com/embed/Ti_-EusVSj8?enablejsapi=1" allowfullscreen></iframe>
+      <iframe id="player-19" src="https://www.youtube.com/embed/Ti_-EusVSj8?enablejsapi=1" allowfullscreen></iframe>
     </div>
 
     <div class="track">
       <div class="track-title">20. Pombagira Misteriosa - Seu Mistério é Poder</div>
-      <iframe src="https://www.youtube.com/embed/YxQ24LupgKg?enablejsapi=1" allowfullscreen></iframe>
+      <iframe id="player-20" src="https://www.youtube.com/embed/YxQ24LupgKg?enablejsapi=1" allowfullscreen></iframe>
     </div>
 
   </div>
@@ -390,6 +390,9 @@
     <p><small>Respeite as tradições. A Rainha não brinca em serviço.</small></p>
   </footer>
 
+  <!-- API do YouTube -->
+  <script src="https://www.youtube.com/iframe_api"></script>
+
   <script>
     // === CONTADOR DE ACESSO DISCRETO ===
     (function() {
@@ -399,6 +402,35 @@
       localStorage.setItem(counterKey, visitCount);
       document.getElementById('contador').textContent = visitCount;
     })();
+
+    // === VARIÁVEIS PARA CONTROLE DOS PLAYERS ===
+    let players = [];
+    let currentPlayingIndex = -1;
+
+    // === FUNÇÃO CHAMADA QUANDO A API DO YOUTUBE ESTÁ PRONTA ===
+    function onYouTubeIframeAPIReady() {
+      // Criar um player para cada iframe
+      for (let i = 1; i <= 20; i++) {
+        const player = new YT.Player('player-' + i, {
+          events: {
+            'onStateChange': (event) => onPlayerStateChange(event, i)
+          }
+        });
+        players.push(player);
+      }
+    }
+
+    // === FUNÇÃO QUE PAUSA TODOS OS VÍDEOS EXCETO O ATUAL ===
+    function onPlayerStateChange(event, playerIndex) {
+      if (event.data === YT.PlayerState.PLAYING) {
+        // Pausar o vídeo anterior, se houver
+        if (currentPlayingIndex !== -1 && currentPlayingIndex !== playerIndex) {
+          players[currentPlayingIndex - 1].pauseVideo();
+        }
+        // Atualizar o índice do vídeo atual
+        currentPlayingIndex = playerIndex;
+      }
+    }
 
     // === 1. Criar o visualizador de chamas (dinâmico) ===
     const visualizer = document.getElementById('visualizer');
